platform/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annualized_Cost__c</fullName>
        <formula>Per_Payroll_Roll_up__c *  Number_of_Pays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Number_Type__c</fullName>
        <label>Billing Number Type</label>
        <picklist>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPG Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Number__c</fullName>
        <label>Billing Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPG Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type_of_Contact__c</field>
                <operation>equals</operation>
                <value>CPG Property Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>VNet_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPG_Project_Manager_Email__c</fullName>
        <formula>CPG_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPG Project Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPG_Project_Manager_Phone__c</fullName>
        <formula>CPG_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPG Project Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPG_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPG Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (CPG Project Manager)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cat_5_Cable_Complete_Date__c</fullName>
        <label>Cat 5 Cable Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Install__c</fullName>
        <description>Date completed</description>
        <inlineHelpText>Date completed</inlineHelpText>
        <label>Completed Install</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Complete_Date__c</fullName>
        <label>Construction Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DENOVO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DENOVO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>IF(  Annualized_Cost__c   &gt; 10000, &quot;Whale&quot;,
 IF( Annualized_Cost__c  &gt; 3000, &quot;Butter Stick&quot;,
  IF( Annualized_Cost__c   &gt;=  1, &quot;Cup Filler&quot;, &quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DPS opportunity type based on amount.</inlineHelpText>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_Billing_AU__c</fullName>
        <description>Billing AU for Depot orders, on Depot report = Owner AU, Shipping AU, User AU</description>
        <inlineHelpText>Billing AU for Depot orders, on Depot report = Owner AU, Shipping AU, User AU</inlineHelpText>
        <label>Depot Billing AU</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_PC_Model__c</fullName>
        <description>Player model being used or requested from Depot, majority are NUC or OPS, sometimes there are special players = Other</description>
        <inlineHelpText>Player model being used or requested from Depot, majority are NUC or OPS, sometimes there are special players = Other</inlineHelpText>
        <label>Depot PC Model</label>
        <picklist>
            <picklistValues>
                <fullName>NUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Depot_Requestor__c</fullName>
        <label>Depot Requestor</label>
        <picklist>
            <picklistValues>
                <fullName>Rachael Thomley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuck Lampe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominic DeSieno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donita Witte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank Petriella</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Depot_Shipping_Method__c</fullName>
        <description>Shipping method for Depot players shipping</description>
        <inlineHelpText>Shipping method for Depot players shipping</inlineHelpText>
        <label>Depot Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Completion_Date__c</fullName>
        <label>Electrical Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_WO__c</fullName>
        <label>Electrical WO#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Order_Date_Depot__c</fullName>
        <description>Equipment order date for orders to Depot (for players)</description>
        <inlineHelpText>Equipment order date for orders to Depot (for players)</inlineHelpText>
        <label>Equipment Order Date - Depot</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment_Shipped_Date__c</fullName>
        <label>Equipment Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Email__c</fullName>
        <label>General Contractor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Name__c</fullName>
        <label>General Contractor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Phone__c</fullName>
        <label>General Contractor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <inlineHelpText>Select clients go live date.</inlineHelpText>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Opening_Date__c</fullName>
        <label>Grand Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_Descriptions__c</fullName>
        <description>Determines sections which appear in the &quot;Service Descriptions&quot; section on a generated pdf for this opportunity.</description>
        <inlineHelpText>Determines sections which appear in the &quot;Service Descriptions&quot; section on a generated pdf for this opportunity.</inlineHelpText>
        <label>Include Descriptions</label>
        <picklist>
            <picklistValues>
                <fullName>Benefits Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Attendance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>WMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCG – Wells Fargo Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WFHM Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WF Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WFCC Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp. Properties Group (CPG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name Vendor</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Pays__c</fullName>
        <formula>IF( ISPICKVAL( Pay_Frequency__c , &quot;Weekly&quot;) , 52, 
      IF(  ISPICKVAL( Pay_Frequency__c , &quot;Bi-Weekly&quot;)  , 26, 
            IF( ISPICKVAL( Pay_Frequency__c , &quot;Monthly&quot;) , 12, 
                  IF( ISPICKVAL( Pay_Frequency__c , &quot;Semi-Monthly&quot;) , 24, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Pays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Contact_Email__c</fullName>
        <label>Onsite Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Onsite_Contact_Name__c</fullName>
        <label>Onsite Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Contact_Phone__c</fullName>
        <label>Onsite Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Order_Identifier__c</fullName>
        <formula>Order__c  &amp; &quot;-&quot; &amp;  Account.ShippingState &amp; &quot;-&quot;&amp; Account.BE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Order #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pay_Frequency__c</fullName>
        <description>Prospect or Client&apos;s payroll frequency.</description>
        <inlineHelpText>Prospect or Client&apos;s payroll frequency.</inlineHelpText>
        <label>Pay Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Per_Payroll_Roll_up__c</fullName>
        <label>Per Payroll Cost</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Per_Payroll_Cost__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Player_Code_Depot__c</fullName>
        <description>Special identification of player: LOB, AVL, monitor ID, placement information, identification to help match player with a monitor.</description>
        <inlineHelpText>Special identification of player: LOB, AVL, monitor ID, placement information, identification to help match player with a monitor.</inlineHelpText>
        <label>Player Code - Depot</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Install_Date__c</fullName>
        <label>Player Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Player_Installed__c</fullName>
        <label>Player # Installed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Tracking__c</fullName>
        <label>Player Tracking #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Installation__c</fullName>
        <description>VNet or vendor can use this field to flag that site is ready for installation.</description>
        <inlineHelpText>VNet or vendor can use this field to flag that site is ready for installation. Cat 5 has been run or IT port is active, etc.</inlineHelpText>
        <label>Ready for Installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remodel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remodel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <formula>Project__r.Request_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date_Depot__c</fullName>
        <description>Requested delivery date for Depot to ship player</description>
        <inlineHelpText>Requested delivery date for Depot to ship player</inlineHelpText>
        <label>Requested Delivery Date - Depot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Player_Tracking__c</fullName>
        <label>Return Player Tracking #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Scheduled_Date_If_Needed__c</fullName>
        <label>Return Scheduled Date (If Needed)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Install_Date__c</fullName>
        <label>Scheduled Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Site_Survey_Date__c</fullName>
        <label>Scheduled Site Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SharePoint_Order__c</fullName>
        <label>SharePoint Order #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_Contact_Name__c</fullName>
        <label>Ship Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Address__c</fullName>
        <label>Ship To Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Postal_Code__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <picklist>
            <picklistValues>
                <fullName>Ship to Store/Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship to SubContractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship to Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Method_Requested__c</fullName>
        <label>Shipping Method Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_AU__c</fullName>
        <formula>Account.Primary_Au__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site AU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_ISO__c</fullName>
        <description>For Depot Report only - information to be written on sticker on outside of player box for tech to know where to install.</description>
        <inlineHelpText>For Depot Report only - information to be written on sticker on outside of player box for tech to know where to install.</inlineHelpText>
        <label>Special Instructions (ISO)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <description>Date the status field was changed</description>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Store_AU__c</fullName>
        <formula>Account.Store_AU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store AU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Order__c</fullName>
        <label>Type of Order</label>
        <picklist>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denovo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Desk/Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh/Remodel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VNet_Notes__c</fullName>
        <label>VNet Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Comments__c</fullName>
        <label>Vendor Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Next_Step_Note__c</fullName>
        <description>Brief note of next step needed on order.</description>
        <label>Vendor Next Step Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Next_Steps_Date__c</fullName>
        <description>Field to flag date to follow up on an order</description>
        <label>Vendor Next Steps Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Staff_Assigned__c</fullName>
        <label>Vendor Staff Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>Marcia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ginny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jonah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_SubContracts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor SubContracts</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Sub Contractor Orders</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Work_Order__c</fullName>
        <label>Vendor Work Order #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>